Add GameEventsService for event handling; update FruitWorkerService and GameGateway. Introduce score tracking in frontend and implement slicing mechanics with particle effects.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="connectionStatus" class="disconnected">Disconnected</div>
     <div id="stats">
+      <div>Score: <span id="score">0</span></div>
       <div>Fruits: <span id="fruitCount">0</span></div>
       <div>FPS: <span id="fps">0</span></div>
     </div>
