Implement game scoring and leaderboard features in RoomService and GameGateway. Update frontend to display player scores, game timer, and leaderboard. Enhance game end handling with final leaderboard broadcast and UI updates for game results.

--- a/frontend/game.html
+++ b/frontend/game.html
@@ -19,9 +19,14 @@
       <div id="gameUI">
         <div id="connectionStatus" class="disconnected">Disconnected</div>
         <div id="stats">
+          <div>Time Left: <span id="timeLeft">2:00</span></div>
           <div>Score: <span id="score">0</span></div>
           <div>Fruits: <span id="fruitCount">0</span></div>
           <div>FPS: <span id="fps">0</span></div>
+        </div>
+        <div id="leaderboard">
+          <h3>Leaderboard</h3>
+          <div id="leaderboardList"></div>
         </div>
         <div id="gameContainer"></div>
       </div>
