--- a/frontend/landing.html
+++ b/frontend/landing.html
@@ -20,6 +20,8 @@
             <input type="text" id="roomCodeInput" placeholder="Enter Room Code" maxlength="6">
             <button id="joinRoomBtn" class="btn">Join Game</button>
           </div>
+          <div class="divider">or</div>
+          <a href="./health.html" class="btn health-btn">View Health Dashboard</a>
         </div>
       </div>
     </div>
