--- a/frontend/game.html
+++ b/frontend/game.html
@@ -69,5 +69,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.js"></script>
     <script type="module" src="./src/socket.js"></script>
     <script type="module" src="./src/game.js"></script>
+
+    <!-- Footer -->
+    <footer style="position: fixed; bottom: 10px; left: 0; right: 0; text-align: center; font-size: 0.9rem; opacity: 0.7; pointer-events: none;">
+      Built with <span style="color: #ff4d4d;">❤️</span> by <a href="https://github.com/mberrishdev" target="_blank" style="color: inherit; text-decoration: none; pointer-events: auto;">mberrishdev</a>
+    </footer>
   </body>
 </html>
