--- a/frontend/health.html
+++ b/frontend/health.html
@@ -154,10 +154,15 @@
             <h2>Active Rooms</h2>
             <div id="roomStats"></div>
         </div>
-    </div>
+        </div>
+
+    <!-- Footer -->
+    <footer style="position: fixed; bottom: 10px; left: 0; right: 0; text-align: center; font-size: 0.9rem; opacity: 0.7;">
+      Built with <span style="color: #ff4d4d;">❤️</span> by <a href="https://github.com/mberrishdev" target="_blank" style="color: inherit; text-decoration: none;">mberrishdev</a>
+    </footer>
 
     <script>
-        function formatStat(label, value) {
+      function formatStat(label, value) {
             return `<div class="stat"><span>${label}</span><span>${value}</span></div>`;
         }
 
