--- a/frontend/landing.html
+++ b/frontend/landing.html
@@ -62,5 +62,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.js"></script>
     <script type="module" src="./src/socket.js"></script>
     <script type="module" src="./src/landing.js"></script>
+
+    <!-- Footer -->
+    <footer style="position: fixed; bottom: 10px; left: 0; right: 0; text-align: center; font-size: 0.9rem; opacity: 0.7;">
+      Built with <span style="color: #ff4d4d;">❤️</span> by <a href="https://github.com/mberrishdev" target="_blank" style="color: inherit; text-decoration: none;">mberrishdev</a>
+    </footer>
   </body>
 </html>
