Revamp landing page with new fruit animations, enhanced logo display, and improved user interface for game creation and joining. Introduce a modal for "How to Play" instructions and update CSS for better layout and responsiveness. Refactor JavaScript to handle modal interactions and fruit animations effectively.

--- a/frontend/game.html
+++ b/frontend/game.html
@@ -49,7 +49,7 @@
 
       <!-- Game UI -->
       <div id="gameUI">
-        <div id="connectionStatus" class="disconnected">Disconnected</div>
+        <div id="connectionStatus" class="disconnected" style="display: none;">Disconnected</div>
         <div id="stats">
           <div>Time Left: <span id="timeLeft">2:00</span></div>
           <div>Score: <span id="score">0</span></div>
