--- a/frontend/health.html
+++ b/frontend/health.html
@@ -1,179 +1,250 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
     <title>Fruit Ninja - Health Dashboard</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="refresh" content="0;url=landing.html" />
+
+    <meta name="title" content="Fruit Ninja - Multiplayer Game" />
+    <meta
+      name="description"
+      content="Play Fruit Ninja online with friends! Create or join rooms, slice fruits, and compete for the highest score in this multiplayer web game."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://fruitninja.mberrishdev.me/" />
+    <meta property="og:title" content="Fruit Ninja - Multiplayer Game" />
+    <meta
+      property="og:description"
+      content="Play Fruit Ninja online with friends! Create or join rooms, slice fruits, and compete for the highest score in this multiplayer web game."
+    />
+    <meta
+      property="og:image"
+      content="https://fruitninja.mberrishdev.me/assets/preview.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://fruitninja.mberrishdev.me/" />
+    <meta property="twitter:title" content="Fruit Ninja - Multiplayer Game" />
+    <meta
+      property="twitter:description"
+      content="Play Fruit Ninja online with friends! Create or join rooms, slice fruits, and compete for the highest score in this multiplayer web game."
+    />
+    <meta
+      property="twitter:image"
+      content="https://fruitninja.mberrishdev.me/assets/preview.png"
+    />
+
+    <!-- Additional Meta Tags -->
+    <meta name="theme-color" content="#1a1a2e" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="./assets/favicon.png" />
+    <link rel="apple-touch-icon" href="./assets/apple-touch-icon.png" />
+
+    <!-- Preconnect to CDN -->
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #1a1a2e;
-            color: #fff;
-        }
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 20px;
+        background-color: #1a1a2e;
+        color: #fff;
+      }
 
-        .dashboard {
-            max-width: 1200px;
-            margin: 0 auto;
-        }
+      .dashboard {
+        max-width: 1200px;
+        margin: 0 auto;
+      }
 
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 20px;
-            padding: 20px;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 10px;
-        }
+      .header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 20px;
+        padding: 20px;
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 10px;
+      }
 
-        .status {
-            padding: 5px 15px;
-            border-radius: 20px;
-            font-weight: bold;
-        }
+      .status {
+        padding: 5px 15px;
+        border-radius: 20px;
+        font-weight: bold;
+      }
 
-        .status.ok {
-            background: #4caf50;
-            color: white;
-        }
+      .status.ok {
+        background: #4caf50;
+        color: white;
+      }
 
-        .status.error {
-            background: #f44336;
-            color: white;
-        }
+      .status.error {
+        background: #f44336;
+        color: white;
+      }
 
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-            margin-bottom: 20px;
-        }
+      .grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        gap: 20px;
+        margin-bottom: 20px;
+      }
 
-        .card {
-            background: rgba(255, 255, 255, 0.1);
-            padding: 20px;
-            border-radius: 10px;
-            backdrop-filter: blur(10px);
-        }
+      .card {
+        background: rgba(255, 255, 255, 0.1);
+        padding: 20px;
+        border-radius: 10px;
+        backdrop-filter: blur(10px);
+      }
 
-        .card h2 {
-            margin-top: 0;
-            color: #ffd700;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-            padding-bottom: 10px;
-        }
+      .card h2 {
+        margin-top: 0;
+        color: #ffd700;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        padding-bottom: 10px;
+      }
 
-        .stat {
-            display: flex;
-            justify-content: space-between;
-            margin: 10px 0;
-            padding: 5px 0;
-            border-bottom: 1px solid rgba(255, 255, 255, 0.05);
-        }
+      .stat {
+        display: flex;
+        justify-content: space-between;
+        margin: 10px 0;
+        padding: 5px 0;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+      }
 
-        .room-card {
-            background: rgba(255, 255, 255, 0.05);
-            padding: 15px;
-            margin: 10px 0;
-            border-radius: 5px;
-            transition: transform 0.2s ease;
-        }
+      .room-card {
+        background: rgba(255, 255, 255, 0.05);
+        padding: 15px;
+        margin: 10px 0;
+        border-radius: 5px;
+        transition: transform 0.2s ease;
+      }
 
-        .room-card:hover {
-            transform: translateY(-2px);
-            background: rgba(255, 255, 255, 0.08);
-        }
+      .room-card:hover {
+        transform: translateY(-2px);
+        background: rgba(255, 255, 255, 0.08);
+      }
 
-        .room-header {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 10px;
-            color: #ffd700;
-        }
+      .room-header {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 10px;
+        color: #ffd700;
+      }
 
-        .fruit-type {
-            display: inline-block;
-            margin: 2px;
-            padding: 2px 8px;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 12px;
-            font-size: 0.9em;
-        }
+      .fruit-type {
+        display: inline-block;
+        margin: 2px;
+        padding: 2px 8px;
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 12px;
+        font-size: 0.9em;
+      }
 
-        .refresh-btn {
-            background: #4caf50;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background 0.3s;
-        }
+      .refresh-btn {
+        background: #4caf50;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background 0.3s;
+      }
 
-        .refresh-btn:hover {
-            background: #45a049;
-        }
+      .refresh-btn:hover {
+        background: #45a049;
+      }
 
-        .last-update {
-            color: rgba(255, 255, 255, 0.6);
-            font-size: 0.9em;
-        }
+      .last-update {
+        color: rgba(255, 255, 255, 0.6);
+        font-size: 0.9em;
+      }
 
-        @keyframes pulse {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.05); }
-            100% { transform: scale(1); }
+      @keyframes pulse {
+        0% {
+          transform: scale(1);
         }
+        50% {
+          transform: scale(1.05);
+        }
+        100% {
+          transform: scale(1);
+        }
+      }
 
-        .highlight {
-            animation: pulse 0.3s ease-in-out;
-        }
+      .highlight {
+        animation: pulse 0.3s ease-in-out;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="dashboard">
-        <div class="header">
-            <h1>🍉 Fruit Ninja Health Dashboard</h1>
-            <button class="refresh-btn" onclick="fetchHealth()">Refresh</button>
+      <div class="header">
+        <h1>🍉 Fruit Ninja Health Dashboard</h1>
+        <button class="refresh-btn" onclick="fetchHealth()">Refresh</button>
+      </div>
+      <div class="grid">
+        <div class="card" id="systemCard">
+          <h2>System Info</h2>
+          <div id="systemStats"></div>
         </div>
-        <div class="grid">
-            <div class="card" id="systemCard">
-                <h2>System Info</h2>
-                <div id="systemStats"></div>
-            </div>
-            <div class="card" id="memoryCard">
-                <h2>Memory Usage</h2>
-                <div id="memoryStats"></div>
-            </div>
-            <div class="card" id="gameCard">
-                <h2>Game Status</h2>
-                <div id="gameStats"></div>
-            </div>
-            <div class="card" id="endpointsCard">
-                <h2>Endpoints</h2>
-                <div id="endpointStats"></div>
-            </div>
+        <div class="card" id="memoryCard">
+          <h2>Memory Usage</h2>
+          <div id="memoryStats"></div>
         </div>
-        <div class="card">
-            <h2>Active Rooms</h2>
-            <div id="roomStats"></div>
+        <div class="card" id="gameCard">
+          <h2>Game Status</h2>
+          <div id="gameStats"></div>
         </div>
+        <div class="card" id="endpointsCard">
+          <h2>Endpoints</h2>
+          <div id="endpointStats"></div>
         </div>
+      </div>
+      <div class="card">
+        <h2>Active Rooms</h2>
+        <div id="roomStats"></div>
+      </div>
+    </div>
 
     <!-- Footer -->
-    <footer style="position: fixed; bottom: 10px; left: 0; right: 0; text-align: center; font-size: 0.9rem; opacity: 0.7;">
-      Built with <span style="color: #ff4d4d;">❤️</span> by <a href="https://github.com/mberrishdev" target="_blank" style="color: inherit; text-decoration: none;">mberrishdev</a>
+    <footer
+      style="
+        position: fixed;
+        bottom: 10px;
+        left: 0;
+        right: 0;
+        text-align: center;
+        font-size: 0.9rem;
+        opacity: 0.7;
+      "
+    >
+      Built with <span style="color: #ff4d4d">❤️</span> by
+      <a
+        href="https://github.com/mberrishdev"
+        target="_blank"
+        style="color: inherit; text-decoration: none"
+        >mberrishdev</a
+      >
     </footer>
 
     <script>
       function formatStat(label, value) {
-            return `<div class="stat"><span>${label}</span><span>${value}</span></div>`;
-        }
+        return `<div class="stat"><span>${label}</span><span>${value}</span></div>`;
+      }
 
-        function formatRoomCard(roomCode, roomData) {
-            return `
+      function formatRoomCard(roomCode, roomData) {
+        return `
                 <div class="room-card">
                     <div class="room-header">
                         <strong>Room: ${roomCode}</strong>
@@ -181,87 +252,116 @@
                     </div>
                     <div class="stat">
                         <span>Game Status</span>
-                        <span>${roomData.isGameStarted ? '🎮 In Progress' : '⏳ Waiting'}</span>
+                        <span>${
+                          roomData.isGameStarted
+                            ? "🎮 In Progress"
+                            : "⏳ Waiting"
+                        }</span>
                     </div>
                     <div>
-                        ${roomData.players.map(player => `
+                        ${roomData.players
+                          .map(
+                            (player) => `
                             <div class="stat">
-                                <span>${player.username} ${player.isOwner ? '👑' : ''}</span>
+                                <span>${player.username} ${
+                              player.isOwner ? "👑" : ""
+                            }</span>
                                 <span>Score: ${player.score}</span>
                             </div>
-                        `).join('')}
+                        `
+                          )
+                          .join("")}
                     </div>
                 </div>
             `;
+      }
+
+      function highlightCard(cardId) {
+        const card = document.getElementById(cardId);
+        card.classList.add("highlight");
+        setTimeout(() => card.classList.remove("highlight"), 300);
+      }
+
+      async function fetchHealth() {
+        try {
+          const response = await fetch(
+            "https://socket.fruitninja.mberrishdev.me/health"
+          );
+          const data = await response.json();
+
+          // System Info
+          document.getElementById("systemStats").innerHTML = `
+                    ${formatStat(
+                      "Status",
+                      `<span class="status ok">${data.status}</span>`
+                    )}
+                    ${formatStat("Environment", data.environment)}
+                    ${formatStat("Node Version", data.nodeVersion)}
+                    ${formatStat("Platform", data.platform)}
+                    ${formatStat("Uptime", data.uptime)}
+                `;
+
+          // Memory Usage
+          document.getElementById("memoryStats").innerHTML = `
+                    ${formatStat("RSS", data.memory.rss)}
+                    ${formatStat("Heap Total", data.memory.heapTotal)}
+                    ${formatStat("Heap Used", data.memory.heapUsed)}
+                    ${formatStat("External", data.memory.external)}
+                `;
+
+          // Game Status
+          document.getElementById("gameStats").innerHTML = `
+                    ${formatStat(
+                      "Active Rooms",
+                      data.game.gameRooms.totalRooms
+                    )}
+                    ${formatStat(
+                      "Active Games",
+                      data.game.gameRooms.activeGames
+                    )}
+                    ${formatStat("Game Status", data.game.gameStatus)}
+                    ${formatStat(
+                      "Last Update",
+                      new Date(data.game.lastUpdate).toLocaleString()
+                    )}
+                `;
+
+          // Endpoints
+          document.getElementById("endpointStats").innerHTML = `
+                    ${formatStat("WebSocket", data.endpoints.websocket)}
+                    ${formatStat("API", data.endpoints.api)}
+                    ${formatStat("Health", data.endpoints.health)}
+                `;
+
+          // Room Stats
+          const roomsHtml = Object.entries(data.game.gameRooms.rooms)
+            .map(([roomCode, roomData]) => formatRoomCard(roomCode, roomData))
+            .join("");
+
+          document.getElementById("roomStats").innerHTML =
+            roomsHtml || '<div class="stat">No active rooms</div>';
+
+          // Highlight updated cards
+          ["systemCard", "memoryCard", "gameCard", "endpointsCard"].forEach(
+            highlightCard
+          );
+        } catch (error) {
+          console.error("Error fetching health data:", error);
+          document.getElementById("systemStats").innerHTML = `
+                    ${formatStat(
+                      "Status",
+                      '<span class="status error">Error</span>'
+                    )}
+                    ${formatStat("Error", error.message)}
+                `;
         }
+      }
 
-        function highlightCard(cardId) {
-            const card = document.getElementById(cardId);
-            card.classList.add('highlight');
-            setTimeout(() => card.classList.remove('highlight'), 300);
-        }
+      // Initial fetch
+      fetchHealth();
 
-        async function fetchHealth() {
-            try {
-                const response = await fetch('https://socket.fruitninja.mberrishdev.me/health');
-                const data = await response.json();
-
-                // System Info
-                document.getElementById('systemStats').innerHTML = `
-                    ${formatStat('Status', `<span class="status ok">${data.status}</span>`)}
-                    ${formatStat('Environment', data.environment)}
-                    ${formatStat('Node Version', data.nodeVersion)}
-                    ${formatStat('Platform', data.platform)}
-                    ${formatStat('Uptime', data.uptime)}
-                `;
-
-                // Memory Usage
-                document.getElementById('memoryStats').innerHTML = `
-                    ${formatStat('RSS', data.memory.rss)}
-                    ${formatStat('Heap Total', data.memory.heapTotal)}
-                    ${formatStat('Heap Used', data.memory.heapUsed)}
-                    ${formatStat('External', data.memory.external)}
-                `;
-
-                // Game Status
-                document.getElementById('gameStats').innerHTML = `
-                    ${formatStat('Active Rooms', data.game.gameRooms.totalRooms)}
-                    ${formatStat('Active Games', data.game.gameRooms.activeGames)}
-                    ${formatStat('Game Status', data.game.gameStatus)}
-                    ${formatStat('Last Update', new Date(data.game.lastUpdate).toLocaleString())}
-                `;
-
-                // Endpoints
-                document.getElementById('endpointStats').innerHTML = `
-                    ${formatStat('WebSocket', data.endpoints.websocket)}
-                    ${formatStat('API', data.endpoints.api)}
-                    ${formatStat('Health', data.endpoints.health)}
-                `;
-
-                // Room Stats
-                const roomsHtml = Object.entries(data.game.gameRooms.rooms)
-                    .map(([roomCode, roomData]) => formatRoomCard(roomCode, roomData))
-                    .join('');
-
-                document.getElementById('roomStats').innerHTML = roomsHtml || '<div class="stat">No active rooms</div>';
-
-                // Highlight updated cards
-                ['systemCard', 'memoryCard', 'gameCard', 'endpointsCard'].forEach(highlightCard);
-
-            } catch (error) {
-                console.error('Error fetching health data:', error);
-                document.getElementById('systemStats').innerHTML = `
-                    ${formatStat('Status', '<span class="status error">Error</span>')}
-                    ${formatStat('Error', error.message)}
-                `;
-            }
-        }
-
-        // Initial fetch
-        fetchHealth();
-
-        // Auto-refresh every 5 seconds
-        setInterval(fetchHealth, 5000);
+      // Auto-refresh every 5 seconds
+      setInterval(fetchHealth, 5000);
     </script>
-</body>
+  </body>
 </html>
